--- a/style.css
+++ b/style.css
@@ -68,13 +68,16 @@ body{
     /* Media query for phone and smaller desktop and laptop sizes */
     
     /* Center all elements vertically and horizontally */
-    .centered-container {
-      width: 100%;
+    .container {
+      margin: 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
+      width: 100%;
+      border: 0px ;
+      border-radius: 0%;
     }
   
     /* Adjust the image size for smaller screens */
