--- a/style.css
+++ b/style.css
@@ -78,12 +78,13 @@ body{
       width: 100%;
       border: 0px ;
       border-radius: 0%;
+      height:100vh;
     }
   
     /* Adjust the image size for smaller screens */
     [data-testid="slackDisplayImage"] {
       width: 50%; 
-      height: 100vh;
+      height: auto;
     }
   }
   
