--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body{
       text-align: center;
       width: 100%;
       border: 0px ;
-      border-radius: 50%;
+      border-radius: 0;
       height:100vh;
     }
   
